# api/swagger-spec.yaml
@@ -24,7 +24,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShopModel'
+                $ref: '#/components/schemas/ResponseShopDto'
         '400':
           description: ''
       tags: &ref_1
@@ -41,9 +41,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/ShopModel'
+                $ref: '#/components/schemas/ResponseShopListDto'
         '400':
           description: ''
       tags: *ref_1
@@ -66,7 +64,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShopModel'
+                $ref: '#/components/schemas/ResponseShopDto'
         '400':
           description: ''
       tags: *ref_1
@@ -94,7 +92,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ShopModel'
+                $ref: '#/components/schemas/ResponseShopDto'
         '400':
           description: ''
       tags: *ref_1
@@ -129,29 +127,21 @@ paths:
           schema:
             type: string
         - name: cursor
-          required: true
+          required: false
           in: query
-          description: ページネーションのカーソル。API は cursor で渡された値より後のレコードを返します
-          example: '2023-06-25T04:04:14.118Z'
+          description: ページネーションのカーソル。API は cursor で渡されたidより後のレコードを返します
+          example: 34
           schema:
-            default: '1'
-            type: string
-        - name: cursorField
-          required: true
-          in: query
-          description: カーソルで指定するフィールド
-          example: createdAt
-          schema:
-            default: id
-            type: string
+            default: 1
+            type: number
         - name: take
           required: false
           in: query
           description: 取得件数
           example: 50
           schema:
-            maximum: 200
-            default: 20
+            maximum: 1000
+            default: 200
             type: number
         - name: sortBy
           required: false
@@ -170,9 +160,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MerchModel'
+                $ref: '#/components/schemas/ResponseMerchListDto'
         '400':
           description: ''
       tags: &ref_3
@@ -190,7 +178,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MerchModel'
+                $ref: '#/components/schemas/ResponseMerchDto'
         '400':
           description: ''
       tags: *ref_3
@@ -225,6 +213,22 @@ components:
       required:
         - id
         - name
+    ResponseShopDto:
+      type: object
+      properties:
+        shop:
+          $ref: '#/components/schemas/ShopModel'
+      required:
+        - shop
+    ResponseShopListDto:
+      type: object
+      properties:
+        shops:
+          type: array
+          items:
+            $ref: '#/components/schemas/ShopModel'
+      required:
+        - shops
     UpdateShopDto:
       type: object
       properties:
@@ -238,20 +242,25 @@ components:
       properties:
         name:
           type: string
+          example: Tシャツ2023
         description:
           type: string
+          example: 2023年のTシャツ
         price:
           type: number
+          example: 2500
         image:
           type: string
+          example: https://static.bucket/path
         isPinning:
           type: boolean
+          example: true
         shopId:
           type: number
+          example: 1
         salesTaxRateId:
           type: number
-        shop:
-          $ref: '#/components/schemas/ShopModel'
+          example: 1
       required:
         - name
         - description
@@ -260,4 +269,31 @@ components:
         - isPinning
         - shopId
         - salesTaxRateId
-        - shop
+    ResponsePaginationDto:
+      type: object
+      properties:
+        cursor:
+          type: number
+          description: ページネーションのカーソル
+          example: 34
+      required:
+        - cursor
+    ResponseMerchListDto:
+      type: object
+      properties:
+        merchs:
+          type: array
+          items:
+            $ref: '#/components/schemas/MerchModel'
+        pagination:
+          $ref: '#/components/schemas/ResponsePaginationDto'
+      required:
+        - merchs
+        - pagination
+    ResponseMerchDto:
+      type: object
+      properties:
+        merch:
+          $ref: '#/components/schemas/MerchModel'
+      required:
+        - merch
